--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  path_provider: ^2.1.5
+  intl: ^0.18.1
+
 
 dev_dependencies:
   flutter_test:
